2010-06-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Fonts.cs:
	* Typeface.cs:
	* PathGeometry.cs:
	* MediaLicense.cs:
	* GlyphTypeface.cs:
	* WaveFormatType.cs:
	* DomainAcquirer.cs:
	* ContentKeyType.cs:
	* LicenseAcquirer.cs:
	* LicenseManagement.cs:
	* VideoOutputConnector.cs:
	* VideoOutputConnectorType.cs:
	* MediaSampleAttributeKeys.cs:
	* JoinDomainCompletedEventArgs.cs:
	* LeaveDomainCompletedEventArgs.cs:
	* CaptureImageCompletedEventArgs.cs:
	* AcquireLicenseCompletedEventArgs.cs:
	* DomainOperationCompletedEventArgs.cs: Update to SL4 final API.

2010-06-02  Jackson Harper  <jackson@ximian.com>

	* ImageSourceConverter.cs: remove the override/new stuff. I don't
	think the new was ever needed, we were just getting a warning
	because we stopped defining NET_2_1.  Without this fix the
	overridden methods never get called.

2010-05-31  Sebastien Pouliot  <sebastien@ximian.com>

	* CaptureDeviceConfiguration.cs: API fix (which removes the FIXME
	too ;-)

2010-05-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* VideoFormat.cs: Add back SL4 beta API so that the drts build.

2010-05-29  Chris Toshok  <toshok@ximian.com>

	* CaptureImageCompletedEventArgs.cs: we need to create the
	WriteableBitmap here instead of passing it from unmanaged, or else
	the managed pixels array won't be created properly.

2010-05-28  Chris Toshok  <toshok@ximian.com>

	* VideoFormat.cs: correct field names and order (and number) of
	arguments to ctor.

2010-05-27  Chris Toshok  <toshok@ximian.com>

	* CaptureSource.cs: add CaptureImageAsync call.

2010-05-26  Chris Toshok  <toshok@ximian.com>

	* VideoSink.cs: implement this by just hooking up to events on the
	CaptureSource which turn around and call the abstract methods.

	* VideoBrush.cs: implement SetSource (CaptureSource).

	* SampleReadyEventArgs.cs, VideoFormatChangedEventArgs.cs: event
	args we use to communicate from CaptureSource to VideoSink.

	* CaptureSource.cs: implement.
